--- a/arch/arm/configs/otter_debug_android_defconfig
+++ b/arch/arm/configs/otter_debug_android_defconfig
@@ -175,11 +175,14 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
