--- a/arch/arm/configs/otter_android_defconfig
+++ b/arch/arm/configs/otter_android_defconfig
@@ -1376,6 +1376,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
