--- a/arch/arm/configs/otter2_android_defconfig
+++ b/arch/arm/configs/otter2_android_defconfig
@@ -2722,6 +2722,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # Kernel hacking
