--- a/arch/arm/configs/otter2_android_defconfig
+++ b/arch/arm/configs/otter2_android_defconfig
@@ -1979,6 +1979,7 @@ CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_PWM is not set
+CONFIG_BACKLIGHT_O2M=y
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
 
@@ -2347,7 +2348,6 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_LT3593 is not set
 CONFIG_LEDS_OMAP4430_SDP_DISPLAY=y
 CONFIG_LEDS_OMAP4430_SDP_KEYPAD=y
-CONFIG_LEDS_OMAP_PWM=y
 CONFIG_LEDS_TRIGGERS=y
 
 #
