--- a/arch/arm/configs/otter2_phablet_defconfig
+++ b/arch/arm/configs/otter2_phablet_defconfig
@@ -180,10 +180,13 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -718,7 +721,7 @@ CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
-# CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG is not set
+CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 # CONFIG_NETFILTER_XT_MATCH_RECENT is not set
@@ -1113,7 +1116,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=m
+CONFIG_TUN=y
 # CONFIG_VETH is not set
 CONFIG_MII=y
 # CONFIG_PHYLIB is not set
@@ -1326,9 +1329,14 @@ CONFIG_TOUCHSCREEN_ILITEK=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 CONFIG_INPUT_BMA250=y
+CONFIG_INPUT_STK_ALS22x7=y
+CONFIG_STK_ALS_CHANGE_THRESHOLD=20
+CONFIG_STK_ALS_SAMPLING_RATE=10
+CONFIG_STK_ALS_TRANSMITTANCE=500
+CONFIG_CM_ALS_TRANSMITTANCE=169
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
-# CONFIG_INPUT_KEYCHORD is not set
+CONFIG_INPUT_KEYCHORD=y
 # CONFIG_INPUT_KEYSPAN_REMOTE is not set
 # CONFIG_INPUT_POWERMATE is not set
 # CONFIG_INPUT_YEALINK is not set
@@ -1440,18 +1448,6 @@ CONFIG_I2C_OMAP=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_I2C_STUB is not set
-CONFIG_SENSETEK_I2C_SENSORS=y
-CONFIG_STK_OPTICAL_SENSOR=y
-CONFIG_STK_ALS=y
-# CONFIG_STK_PS is not set
-# CONFIG_STK_ALS_GENERIC is not set
-CONFIG_STK_ALS22x7=y
-CONFIG_STK_ALS_CHANGE_THRESHOLD=20
-CONFIG_STK_ALS_SAMPLING_RATE=10
-CONFIG_STK_ALS_TRANSMITTANCE=500
-CONFIG_CM_ALS_TRANSMITTANCE=169
-# CONFIG_STK_SYSFS_DBG is not set
-CONFIG_STK_SHOW_INFO=y
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
