--- a/arch/arm/configs/otter2_android_defconfig
+++ b/arch/arm/configs/otter2_android_defconfig
@@ -985,7 +985,9 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
-# CONFIG_SYNC is not set
+CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
+# CONFIG_SW_SYNC_USER is not set
 # CONFIG_DMA_SHARED_BUFFER is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
